# glards-scripting-external

./: .gitignore  LICENSE  README.md
src/component/glards-scripting-external/: CMakeLists.txt  CMakeSettings.json  build.bat  component.json  glards-scripting-external.rc
src/component/glards-scripting-external/src/: Component.cpp
src/grpc/: externalscripting.proto
src/server/dotnet/: DotnetSample.sln
src/server/dotnet/DotnetGrpcServer/: DotnetGrpcServer.csproj  Program.cs  appsettings.json
src/server/dotnet/DotnetGrpcServer/Properties/: launchSettings.json
src/server/dotnet/DotnetGrpcServer/Services/: EventDispatcher.cs  ExternalScriptingService.cs
src/server/dotnet/DotnetGrpcServer/Utils/: MessagePack.cs
src/server/dotnet/DotnetUnitTest/: DotnetUnitTest.csproj  MsgpackSerializationTest.cs
